<resources>
    <string name="app_name">Autentificazone</string>
    <string name="title_activity_login_acrtivity">LoginAcrtivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="login_screen">LOGIN SCREEN</string>
    <string name="login">Login</string>
    <string name="register">Registrati</string>
    <string name="non_account">Non hai un account?</string>
    <string name="registers">REGISTER</string>
    <string name="hai_account">Hai gia un account?</string>
    <string name="log_in">Login</string>
    <string name="il_login_ha_avuto_successo">Il login ha avuto successo</string>
    <string name="logout">Logout</string>
</resources>